Added hadoop, mongodb and spark

--- a/templates/header.html
+++ b/templates/header.html
@@ -82,7 +82,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="#/hadoop">Apache Hadoop</a>
+                                <a href="/hadoop/apache-hadoop/">Apache Hadoop</a>
                             </li>
                             <li>
                                 <a href="#/machine-learning">Machine Learning</a>
