Fixed the < symbol and added fuse.

--- a/templates/header.html
+++ b/templates/header.html
@@ -85,11 +85,11 @@
                                 <a href="/hadoop/apache-hadoop/">Apache Hadoop</a>
                             </li>
                             <li>
-                                <a href="#/machine-learning">Machine Learning</a>
+                                <a href="/mongodb/mongodb">Mongo DB</a>
                             </li>
 
                             <li>
-                                <a href="#/apache-spark">Apache Spark</a>
+                                <a href="/spark/apache-spark/">Apache Spark</a>
                             </li>
                              <li>
                                 <a href="#/docLayout">DocLayout</a>
