--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,8 @@
 </head>
 
     <div>
-    {% include 'header.html' %}'></div>
+    {% include 'header.html' %}'
+    </div>
 
         <div id="content">
             {% block content %}
@@ -39,8 +40,6 @@
             </div>
             {% endblock %}
         </div>
-
-
 
 
     <div>
