--- a/templates/hadoop_template.html
+++ b/templates/hadoop_template.html
@@ -2,27 +2,28 @@
             {% block title %}{{ post.title }}{% endblock %}
             {% block description %}{{ post.description }}{% endblock %}
 
-
 		{% block rightsidebar %}
 		     <div class="col-md-2 text-left mg pd">
-			<img src="/static/images/ad1.png" />
+			<h4> one </h4>
+			<h4> two </h4>
 		     </div>
 		{% endblock %}
 
             {% block content %}
             <div class="title">
-                <div class="container-fluid">
+                <div class="container">
                     <h2>
                         {{ post.title }}
                     </h2>
                 </div>
             </div>
-            <div class="container-fluid">
-                <div class="container-fluid">
+            <div class="container">
+                <div class="row">
+                </div>
                     <div id="post" class="eight columns card">
                         {{ post.html|safe }}
                     </div>
-                   </div>
+
             </div>
 
             <script type="text/javascript">
@@ -34,10 +35,5 @@
 
 
 
-	  {% block adbar %}
-            <div class="col-md-2  text-right mg pd">
-               <img src="/static/images/ad2.png" />
-            </div>
-	  {% endblock %}
 
 
