--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,7 @@
-
+<nav class="navbar navbar-default" style="height:80px; border-radius:0px; border-bottom:2px solid #2998A0">
+<!--
     <nav class="navbar navbar-info navbar-fixed-top" role="navigation">
+-->
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
