Added docker content

--- a/templates/header.html
+++ b/templates/header.html
@@ -43,7 +43,7 @@
                     </li> -->
 
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li class="active">
                                 <a href="#/marketing-analytics">Marketing Analytics</a>
@@ -81,7 +81,7 @@
                         </ul>
                     </li> -->
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources<b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tutorials<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
                                 <a href="/hadoop/apache-hadoop/">Apache Hadoop</a>
@@ -94,14 +94,14 @@
                                 <a href="/spark/apache-spark/">Apache Spark</a>
                             </li>
                              <li>
-                                <a href="#/docLayout">DocLayout</a>
+                                <a href="#/docLayout">Data Science</a>
                             </li>
                             
                             <li>
                                 <a href="pricing.html">Visualizations</a>
                             </li>
                              <li>
-                                <a href="projects2.html">Projects</a>
+                                <a href="projects2.html">R</a>
                             </li>
                             
                             
@@ -109,9 +109,6 @@
                     </li>
                                  <li>
                         <a href="/aboutus">About</a>
-                    </li>
-                    <li>
-                        <a href="#/contact">Contact</a>
                     </li>
                     </li>
                                  <li>
