--- a/templates/hadoop_template.html
+++ b/templates/hadoop_template.html
@@ -11,13 +11,13 @@
 
             {% block content %}
             <div class="title">
-                <div class="container">
+                <div class="container-fluid">
                     <h2>
                         {{ post.title }}
                     </h2>
                 </div>
             </div>
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
                 </div>
                     <div id="post" class="eight columns card">
