--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,44 @@
 		<!-- Marketing Icons Section -->
 		<div class="row">
 		    <div class="col-lg-12">
-			<h2 class="page-header">Tutorials
+			<h2 class="page-header">Consulting Services
+			</h2>
+		    </div>
+		    <div class="col-md-4">
+			<div class="panel panel-default">
+			    <div class="panel-heading">
+				<h4><i class="fa fa-fw" ></i>Cloud</h4>
+			    </div>
+			    <div class="panel-body">
+				<p>High Availability, Continuity Services with Disaster Recovery. Enhanced Security Srevices. Be it AWS, Azure, Google or OpenStack, We have it All. </p><br>
+				<a href="/hadoop/apache-hadoop/" class="btn btn-default pull-right">Learn More</a>
+			    </div>
+			</div>
+		    </div>
+		    <div class="col-md-4">
+			<div class="panel panel-default">
+			    <div class="panel-heading">
+				<h4><i class="fa fa-fw" ></i>Analytics</h4>
+			    </div>
+			    <div class="panel-body">
+				<p>High Availability, Continuity Services with Disaster Recovery. Enhanced Security Srevices. Be it AWS, Azure, Google or OpenStack, We have it All. </p><br>
+				<a href="/hadoop/apache-hadoop/" class="btn btn-default pull-right">Learn More</a>
+			    </div>
+			</div>
+		    </div>
+		    <div class="col-md-4">
+			<div class="panel panel-default">
+			    <div class="panel-heading">
+				<h4><i class="fa fa-fw" ></i>Big Data</h4>
+			    </div>
+			    <div class="panel-body">
+				<p>High Availability, Continuity Services with Disaster Recovery. Enhanced Security Srevices. Be it AWS, Azure, Google or OpenStack, We have it All. </p><br>
+				<a href="/hadoop/apache-hadoop/" class="btn btn-default pull-right">Learn More</a>
+			    </div>
+			</div>
+		    </div>
+		    <div class="col-lg-12">
+			<h2 class="page-header">Latest State of the Tutorials
 			</h2>
 		    </div>
 		    <div class="col-md-4">
@@ -133,7 +170,7 @@
 		<!-- Portfolio Section -->
 		<div class="row">
 		    <div class="col-lg-12">
-			<h2 class="page-header">Projects</h2>
+			<h2 class="page-header">Template Projects</h2>
 		    </div>
 		    <div class="col-md-4 col-sm-6">
 			<a href="/marketing-analytics/">
