--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
 			</div>
 		    </div>
 		    <div class="col-lg-12">
-			<h2 class="page-header">Latest State of the Tutorials
+			<h2 class="page-header">Tutorials
 			</h2>
 		    </div>
 		    <div class="col-md-4">
