Added spark release 0.1

--- a/templates/vagrant-template.html
+++ b/templates/vagrant-template.html
@@ -4,13 +4,18 @@
 
 		{% block rightsidebar %}
 		     <div class="col-md-2 text-left mg pd">
-			<h4><a href="/hadoop/overview">Hadoop Overview</a></h4>
-			<h4><a href="/hadoop/getting-started">Getting Started</a></h4>
-			<h4><a href="/hadoop/hive">Hive</a></h4>
-			<h4><a href="/hadoop/mapreduce-design">MR Design Patterns</a></h4>
-			<h4><a href="/hadoop/mapreduce-java">MR with Java</a></h4>
-			<h4><a href="/hadoop/mapreduce-python">MR with Python</a></h4>
-			<h4><a href="/hadoop/pig">Pig</a></h4>
+			<li>
+			<a href="/vagrant/overview">Overview</a>
+                        </li>
+			<li>
+			<a href="/vagrant/getting-started">Getting Started</a>
+                        </li>
+			<li>
+			<a href="/vagrant/vagrant_puppet">Vagrant & Puppet</a>
+                        </li>
+			<li>
+			<a href="/vagrant/vagrant_issues">Vagrant Issues</a>
+                        </li>
 		     </div>
 		{% endblock %}
 
