Changed Home Page.

--- a/templates/header.html
+++ b/templates/header.html
@@ -97,16 +97,12 @@
                                 <a href="/spark/apache-spark/">Apache Spark</a>
                             </li>
                              <li>
-                                <a href="#/docLayout">Data Science</a>
+                                <a href="/vagrant/overview">Dev Ops</a>
                             </li>
                             
                             <li>
-                                <a href="pricing.html">Visualizations</a>
+                                <a href="/docker/docker">Docker</a>
                             </li>
-                             <li>
-                                <a href="projects2.html">R</a>
-                            </li>
-                            
                             
                         </ul>
                     </li>
