--- a/templates/index.html
+++ b/templates/index.html
@@ -21,10 +21,10 @@
 		    <div class="col-md-4">
 			<div class="panel panel-default">
 			    <div class="panel-heading">
-				<h4><i class="fa fa-fw" ></i>Cloud</h4>
+				<h4><i class="fa fa-fw" ></i>We Build and Deploy Apps on Cloud</h4>
 			    </div>
 			    <div class="panel-body">
-				<p>High Availability, Continuity Services with Disaster Recovery. Enhanced Security Srevices. Be it AWS, Azure, Google or OpenStack, We have it All. </p><br>
+				<p>Design, build and Deploy applications on Cloud. High Availability and Continuity Services with Disaster Recovery. We work with AWS, Azure ad Google Cloud Platforms</p><br>
 				<a href="/hadoop/apache-hadoop/" class="btn btn-default pull-right">Learn More</a>
 			    </div>
 			</div>
@@ -32,10 +32,10 @@
 		    <div class="col-md-4">
 			<div class="panel panel-default">
 			    <div class="panel-heading">
-				<h4><i class="fa fa-fw" ></i>Analytics</h4>
+				<h4><i class="fa fa-fw" ></i>We provide insights to your Data</h4>
 			    </div>
 			    <div class="panel-body">
-				<p>High Availability, Continuity Services with Disaster Recovery. Enhanced Security Srevices. Be it AWS, Azure, Google or OpenStack, We have it All. </p><br>
+				<p>You bring Data, We bring BigData expertise. You bring business insights, we make it so. We work with Hadoop, Apache Spark, Cassandra, HBase, Kafka, Amazon Dynamo and much more</p><br>
 				<a href="/hadoop/apache-hadoop/" class="btn btn-default pull-right">Learn More</a>
 			    </div>
 			</div>
@@ -43,25 +43,25 @@
 		    <div class="col-md-4">
 			<div class="panel panel-default">
 			    <div class="panel-heading">
-				<h4><i class="fa fa-fw" ></i>Big Data</h4>
+				<h4><i class="fa fa-fw" ></i>We Manage Big Data Infra for You</h4>
 			    </div>
 			    <div class="panel-body">
-				<p>High Availability, Continuity Services with Disaster Recovery. Enhanced Security Srevices. Be it AWS, Azure, Google or OpenStack, We have it All. </p><br>
+				<p>Be it Hadoop, Cassandra, Hbase, on cloud or on Premise, we take care of your infrastrcutre, while you focus on your businsess</p><br>
 				<a href="/hadoop/apache-hadoop/" class="btn btn-default pull-right">Learn More</a>
 			    </div>
 			</div>
 		    </div>
 		    <div class="col-lg-12">
-			<h2 class="page-header">Tutorials
+			<h2 class="page-header">Yes Consultant is ready.    Call 011-91-9866194332 Right Now!
 			</h2>
 		    </div>
 		    <div class="col-md-4">
 			<div class="panel panel-default">
 			    <div class="panel-heading">
-				<h4><i class="fa fa-fw" ></i>Apache Hadoop Tutorials</h4>
+				<h4><i class="fa fa-fw" ></i>Free Apache Hadoop Tutorials</h4>
 			    </div>
 			    <div class="panel-body">
-				<p>High Availability, Continuity Services with Disaster Recovery. Enhanced Security Srevices. Be it AWS, Azure, Google or OpenStack, We have it All. </p><br>
+				<p>Would you like these tutorials works for you. We would glad to build Map Reduce Programs for you.</p><br>
 				<a href="/hadoop/apache-hadoop/" class="btn btn-default pull-right">Learn More</a>
 			    </div>
 			</div>
@@ -69,11 +69,11 @@
 		    <div class="col-md-4">
 			<div class="panel panel-default">
 			    <div class="panel-heading">
-				<h4><i class="fa fa-fw"></i>Apache Spark Tutorials</h4>
+				<h4><i class="fa fa-fw"></i>Free Apache Spark Tutorials</h4>
 			    </div>
 			    <div class="panel-body">
-				<p>Which framework should I use for my Business Case. Should I use hadoop?, Apache Spark?
-				Which Storage should I use? Apache Cassandra?, Apache Hadoop and/or PostgresSQL?
+				<p>We will build you Spark Infrastructure for your analytics needs.
+				We will build and run Spark Jobs for you. You can focus on Business.
 				</p>
 				<a href="/spark/apache-spark" class="btn btn-default pull-right">Learn More</a>
 			    </div>
@@ -83,13 +83,13 @@
 		    <div class="col-md-4">
 			<div class="panel panel-default">
 			    <div class="panel-heading">
-				<h4><i class="fa fa-fw"></i>Angular Tutorials</h4>
+				<h4><i class="fa fa-fw"></i>Free Devops Tutorials</h4>
 			    </div>
 			    <div class="panel-body">
-				Can I predict my Customer life Time value? Is there a customer churn?
-				Making data driven decisions data transformation modelling Visualization deployment and monitoring
+				<p>
+				Devops automation, build management, server monitoring and optimization. We are ready to build it for you.
 				</p>
-				<a href="/cassandra/cassandra.md" class="btn btn-default pull-right" >Learn More</a>
+				<a href="/vagrant/overview" class="btn btn-default pull-right" >Learn More</a>
 			    </div>
 			</div>
 		    </div>
@@ -97,13 +97,13 @@
 		    <div class="col-md-4">
 			<div class="panel panel-default">
 			    <div class="panel-heading">
-				<h4><i class="fa fa-fw"></i>Apache Cassandra Tutorials</h4>
+				<h4><i class="fa fa-fw"></i>Free Docker Tutorials</h4>
 			    </div>
 			    <div class="panel-body">
-				Can I predict my Customer life Time value? Is there a customer churn?
-				Making data driven decisions data transformation modelling Visualization deployment and monitoring
+				<p>
+				We can Build a Smart Micro Services Architecture wit Docket, Kubernetes for your Development and Production Needs.
 				</p>
-				<a href="/cassandra/cassandra.md" class="btn btn-default pull-right" >Learn More</a>
+				<a href="/docker/docker" class="btn btn-default pull-right" >Learn More</a>
 			    </div>
 			</div>
 		    </div>
@@ -111,11 +111,25 @@
 		    <div class="col-md-4">
 			<div class="panel panel-default">
 			    <div class="panel-heading">
-				<h4><i class="fa fa-fw"></i>Scala Tutorials</h4>
+				<h4><i class="fa fa-fw"></i>Free Mongodb Tutorials</h4>
 			    </div>
 			    <div class="panel-body">
-				Can I predict my Customer life Time value? Is there a customer churn?
-				Making data driven decisions data transformation modelling Visualization deployment and monitoring
+				<p>
+				Are you looking build and deploy Big Data Apps with MongoDB. We can build and deploys apps for using MongoDB.
+				</p>
+				<a href="/mongodb/mongodb" class="btn btn-default pull-right" >Learn More</a>
+			    </div>
+			</div>
+		    </div>
+
+		    <div class="col-md-4">
+			<div class="panel panel-default">
+			    <div class="panel-heading">
+				<h4><i class="fa fa-fw"></i>Free Akka Tutorials</h4>
+			    </div>
+			    <div class="panel-body">
+				<p>
+				Coming Soon
 				</p>
 				<a href="/cassandra/cassandra.md" class="btn btn-default pull-right" >Learn More</a>
 			    </div>
@@ -125,25 +139,11 @@
 		    <div class="col-md-4">
 			<div class="panel panel-default">
 			    <div class="panel-heading">
-				<h4><i class="fa fa-fw"></i>Akka Tutorials</h4>
+				<h4><i class="fa fa-fw"></i>Free Fuse Tutorials</h4>
 			    </div>
 			    <div class="panel-body">
-				Can I predict my Customer life Time value? Is there a customer churn?
-				Making data driven decisions data transformation modelling Visualization deployment and monitoring
-				</p>
-				<a href="/cassandra/cassandra.md" class="btn btn-default pull-right" >Learn More</a>
-			    </div>
-			</div>
-		    </div>
-
-		    <div class="col-md-4">
-			<div class="panel panel-default">
-			    <div class="panel-heading">
-				<h4><i class="fa fa-fw"></i>JBoss Tutorials</h4>
-			    </div>
-			    <div class="panel-body">
-				Can I predict my Customer life Time value? Is there a customer churn?
-				Making data driven decisions data transformation modelling Visualization deployment and monitoring
+				<p>
+				Coming Soon
 				</p>
 				<a href="/cassandra/cassandra.md" class="btn btn-default pull-right" >Learn More</a>
 			    </div>
@@ -156,8 +156,8 @@
 				<h4><i class="fa fa-fw"></i>Elastic Search Tutorials</h4>
 			    </div>
 			    <div class="panel-body">
-				Can I predict my Customer life Time value? Is there a customer churn?
-				Making data driven decisions data transformation modelling Visualization deployment and monitoring
+				<p>
+					Coming Soon
 				</p>
 				<a href="/cassandra/cassandra.md" class="btn btn-default pull-right" >Learn More</a>
 			    </div>
