Added cassandra tutorials.

--- a/templates/index.html
+++ b/templates/index.html
@@ -125,13 +125,13 @@
 		    <div class="col-md-4">
 			<div class="panel panel-default">
 			    <div class="panel-heading">
-				<h4><i class="fa fa-fw"></i>Free Akka Tutorials</h4>
+				<h4><i class="fa fa-fw"></i>Free Cassandra Tutorials</h4>
 			    </div>
 			    <div class="panel-body">
 				<p>
-				Coming Soon
+				We have installed a 12 node cluster for one of customers. We manage servers, performance tuning and run daily reports on the same. We can do it for you too!.
 				</p>
-				<a href="/cassandra/cassandra.md" class="btn btn-default pull-right" >Learn More</a>
+				<a href="/cassandra/installing" class="btn btn-default pull-right" >Learn More</a>
 			    </div>
 			</div>
 		    </div>
