Added mongodb and cassandra

--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,7 @@
 				<p>
 				We have installed a 12 node cluster for one of customers. We manage servers, performance tuning and run daily reports on the same. We can do it for you too!.
 				</p>
-				<a href="/cassandra/installing" class="btn btn-default pull-right" >Learn More</a>
+				<a href="/cassandra/introduction" class="btn btn-default pull-right" >Learn More</a>
 			    </div>
 			</div>
 		    </div>
