Added ELK, mysql, Terraform tutorials.

--- a/templates/index.html
+++ b/templates/index.html
@@ -139,13 +139,13 @@
 		    <div class="col-md-4">
 			<div class="panel panel-default">
 			    <div class="panel-heading">
-				<h4><i class="fa fa-fw"></i>Free Fuse Tutorials</h4>
+				<h4><i class="fa fa-fw"></i>Logfile Ananlysis with ELK</h4>
 			    </div>
 			    <div class="panel-body">
 				<p>
-				Coming Soon
+				We have setup LogStash for an Enerprise Customer on AWS for Production Monitoring, Debugging and Analysis. Do you want yours to be setup? Call Us.
 				</p>
-				<a href="/cassandra/cassandra.md" class="btn btn-default pull-right" >Learn More</a>
+				<a href="/elk/elk" class="btn btn-default pull-right" >Learn More</a>
 			    </div>
 			</div>
 		    </div>
@@ -153,17 +153,30 @@
 		    <div class="col-md-4">
 			<div class="panel panel-default">
 			    <div class="panel-heading">
-				<h4><i class="fa fa-fw"></i>Elastic Search Tutorials</h4>
+				<h4><i class="fa fa-fw"></i>Terraform Tutorials</h4>
 			    </div>
 			    <div class="panel-body">
 				<p>
-					Coming Soon
+					Terraform has great set of features. You want us to help your Provising. Call Us.
 				</p>
-				<a href="/cassandra/cassandra.md" class="btn btn-default pull-right" >Learn More</a>
+				<a href="/terraform/terraform" class="btn btn-default pull-right" >Learn More</a>
 			    </div>
 			</div>
 		    </div>
 
+		    <div class="col-md-4">
+			<div class="panel panel-default">
+			    <div class="panel-heading">
+				<h4><i class="fa fa-fw"></i>Free Database Tutorials</h4>
+			    </div>
+			    <div class="panel-body">
+				<p>
+					MySQL is the popular Open Source Database. We have set up RDS for Enterprises and managed RDS. Customer is no longer worried about Backups, Availability. Do you wants yours to be setup?
+				</p>
+				<a href="/mysql/mysql" class="btn btn-default pull-right" >Learn More</a>
+			    </div>
+			</div>
+		    </div>
 		</div>
 		<!-- /.row -->
 
