--- a/templates/mysql-template.html
+++ b/templates/mysql-template.html
@@ -5,25 +5,10 @@
 		{% block rightsidebar %}
 		     <div class="col-md-2 text-left mg pd">
 			<li>
-			<a href="/vagrant/overview">Overview</a>
+			<a href="/mysql/mysql">All you want in MySQL</a>
                         </li>
 			<li>
-			<a href="/vagrant/using">Using Vagrant</a>
-                        </li>
-			<li>
-			<a href="/vagrant/vagrant">Getting Started</a>
-                        </li>
-			<li>
-			<a href="/vagrant/vagrant_puppet">Vagrant & Puppet</a>
-                        </li>
-			<li>
-			<a href="/vagrant/terraform">Using Terraform</a>
-                        </li>
-			<li>
-			<a href="/vagrant/elk">Log file analysis</a>
-                        </li>
-			<li>
-			<a href="/vagrant/vagrant_issues">Vagrant Issues</a>
+			<a href="/mysql/installing">Installing MySQL</a>
                         </li>
 		     </div>
 		{% endblock %}
