Added puppet, vagrant basic stuff and templates.

--- a/templates/elk-template.html
+++ b/templates/elk-template.html
@@ -7,6 +7,9 @@
 			<li>
 			<a href="/elk/elk">Logstash and Kibana</a>
                         </li>
+			<li>
+			<a href="/elk/puppet">Installing Logstash Using Puppet</a>
+                        </li>
 		     </div>
 		{% endblock %}
 
