--- a/templates/puppet_template.html
+++ b/templates/puppet_template.html
@@ -5,13 +5,19 @@
 		{% block rightsidebar %}
 		     <div class="col-md-2 text-left mg pd">
 			<li>
-			<a href="/terraform/terraform">Introduction</a>
+			<a href="/puppet/puppet">About Puppet</a>
                         </li>
 			<li>
-			<a href="/terraform/basic-terraform">Basic Example</a>
+			<a href="/puppet/hiera">About Hiera</a>
                         </li>
 			<li>
-			<a href="/terraform/asg">Auto Scaling Groups with Terraform</a>
+			<a href="/puppet/tutorial1">Basic Tutorial on Puppet</a>
+                        </li>
+			<li>
+			<a href="/puppet/tutorial2">Hiera Tutorial </a>
+                        </li>
+			<li>
+			<a href="/puppet/roles_profiles">Roles and Profiles</a>
                         </li>
 		     </div>
 		{% endblock %}
