--- a/templates/vagrant-template.html
+++ b/templates/vagrant-template.html
@@ -14,6 +14,12 @@
 			<a href="/vagrant/vagrant">Getting Started</a>
                         </li>
 			<li>
+			<a href="/vagrant/basic0">Very Basic Vagrant</a>
+                        </li>
+			<li>
+			<a href="/vagrant/basic">Booting Ubuntu VM</a>
+                        </li>
+			<li>
 			<a href="/vagrant/vagrant_puppet">Vagrant & Puppet</a>
                         </li>
 			<li>
